-
Bug
-
Resolution: Done
-
P4: Low
-
5.0.0 Beta 2, 5.2.0 Beta1
-
None
-
Ubuntu 12.04 64-bit
-
59b860450fef906d72d6a343190ba2d45383aba6 (qtbase/5.6, 19.10.2015, 5.6)
When running the complexping example, it gives the following warning:
Connecting to deprecated signal QDBusConnectionInterface::serviceOwnerChanged(QString,QString,QString)
- is duplicated by
-
QTBUG-49648 Deprecated signal "QDBusConnectionInterface::serviceOwnerChanged"
-
- Closed
-
| For Gerrit Dashboard: QTBUG-28082 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 127844,3 | Polish the complexpingpong example | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |