Mark QDBusConnectionInterface::serviceOwnerChanged as deprecated.

It warns that it is deprecated if used, but it is currently not marked
as such.

Task-number: QTBUG-28082

Change-Id: Ib0bf034c188650ae77eb5550769e032490d19783
Reviewed-by: Jerome Pasion <jerome.pasion@digia.com>